[tool.poetry]
name = "course-work-3"
version = "0.1.0"
description = ""
authors = ["programmer <ildarinho99@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work_3"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
